force-app/main/default/objects/PlaylistTrack__c/PlaylistTrack__c.object-meta.xml
<CustomObject>
    <label>Playlist Track</label>
    <nameField>
        <displayFormat>PL{00000}</displayFormat>
        <label>PlaylistTrack Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PlaylistTracks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>