force-app/main/default/objects/PlaylistTrack__c/fields/Playlist__c.field-meta.xml
<CustomField>
    <fullName>Playlist__c</fullName>
    <label>Playlist</label>
    <referenceTo>Playlist__c</referenceTo>
    <relationshipName>MyPlaylists</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>