force-app/main/default/objects/PlaylistTrack__c/fields/PlaylistTrack__c.field-meta.xml
<CustomField>
    <fullName>PlaylistTrack__c</fullName>
    <externalId>true</externalId>
    <label>Playlist Track</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>